deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-kube-deployment
  labels:
    app: simple-kube
spec:
  replicas: 3 # 3 replica of this 'pod'
  selector:
    matchLabels: # node selection rule: if label name == 'simple-kube'
      app: simple-kube
  template:
    metadata:
      labels:
        app: simple-kube
    spec:
      containers:
      - name: simple-kube
        image: simple-kube:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
